install/k8s/add-ons/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    #ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16 # change this range to admin IPs
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - myingress.northeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - http:
      paths:
      - backend:
          serviceName: myprometheus-server
          servicePort: 80
        path: /prometheus(.*)
      - backend:
          serviceName: myprometheus-alertmanager
          servicePort: 80
        path: /alertmanager(.*)
